[package]
name = "sq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
keywords = { git = "https://github.com/j-schwar/keywords.git" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
test-log = { version = "0.2.18", features = ["trace"] }
slotmap = { version = "1.0.7", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
serde_json = "1.0.142"
dirs = "6.0.0"
odbc-api = "14.3.0"
